--- a/css/mobile-large.css
+++ b/css/mobile-large.css
@@ -1,56 +1,56 @@
 /* || STYLE GENERAL */
 
+/* Pour chaque titre de card */
+h3 {
+	font-size: 13px;
+}
+
+/* Prix hébergement */
+.price {
+	font-size: 12px;
+}
+
 /* Note étoiles */
 .rating {
 	justify-content: initial;
 	width: initial;
+	font-size: 10px;
 }
 
 /* || HEADER */
 
 header {
-	flex-direction: column;
-	align-items: center;
-	margin: 0 0 0 0;
-	width: 100%;
+	flex-direction: row;
+	align-items: initial;
 }
 
 /* Logo */
 header img {
-	margin: 10px 0 0 12%;
+	margin: 34px 0 0 6%;
 }
 
 nav {
-	margin: 30px 0 0 0;
-	width: 100%;
+	margin: 0 0 0 0;
+	width: initial;
 }
 
 header ul {
-	justify-content: initial;
-	text-align: center;
-	/* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-	align-items: initial;
+	text-align: initial;
 }
 
 header li {
-	padding: 0 0 10px 0;
-	width: 50%;
-	/* Permet d'avoir la bordure tout en haut */
-	border-top: 0;
-	/* Evite le décalage du texte lors du hover */
-	border-bottom: 4px solid #f2f2f2;
+	border-bottom: initial;
+	width: initial;
 }
 
-/* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-	border-top: 0;
-	border-bottom: 4px solid #0065fc;
+	border-bottom: initial;
 }
 
 /* || MAIN */
 
 main {
-	margin: 4% auto 5% auto;
+	margin: 4% auto 50px auto;
 	width: 100%;
 }
 
@@ -77,8 +77,8 @@ main {
 
 .search-button {
 	flex-shrink: 0;
-	margin: 0 0 0 0;
 	border-radius: 0 20px 20px 0;
+	margin: 0 0 0 0;
 }
 
 /* || FILTRES ET RESULTATS */
@@ -99,8 +99,8 @@ main {
 
 /* Logo filtre */
 .filters .fa-solid {
-	width: 40px;
 	height: 40px;
+	width: 40px;
 }
 
 /* Intitulé filtre */
@@ -109,7 +109,7 @@ main {
 	font-size: 17px;
 }
 
-/* Dimensions de la div avec logo + phrase */
+/* Div avec logo + phrase */
 .results {
 	align-items: initial;
 	margin: 20px 0 0 0;
@@ -117,8 +117,8 @@ main {
 
 .fa-info {
 	flex-shrink: 0;
-	width: 20px;
 	height: 20px;
+	width: 20px;
 }
 
 /* Div hébergements et populaires */
@@ -142,7 +142,6 @@ main {
 	border-radius: initial;
 	background-color: initial;
 	width: initial;
-	/* Arrondi bordure */
 	padding: 0 6% 0 6%;
 }
 
@@ -152,20 +151,18 @@ main {
 }
 
 .lodging-list {
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: space-around;
 	align-items: center;
-	margin: 15px 0 0 0;
+	margin: 4% auto 0 auto;
+	max-width: 576px;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-	margin: 0 0 14px 0;
-	width: 71%;
-	max-width: 340px;
-}
-
-.lodging-image {
-	aspect-ratio: 2.85 / 1;
+	margin: 0 1% 3.5% 1%;
+	max-width: 276px;
+	width: 48%;
 }
 
 /* "Afficher plus" */
@@ -174,6 +171,7 @@ main {
 }
 
 /* || LES PLUS POPULAIRES */
+
 .most-popular {
 	flex-shrink: initial;
 	border-radius: 0;
@@ -192,24 +190,31 @@ main {
 }
 
 .popular-list {
+	flex-direction: row;
+	justify-content: space-around;
 	align-items: center;
-	margin: 15px 0 0 0;
+	margin: 4% auto 0 auto;
+	max-width: 576px;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-	margin: 0 0 10px 0;
-	padding: 5px;
-	width: 71%;
-	max-width: 340px;
+	margin: 0 1% 3.5% 1%;
+	max-width: 276px;
+	width: 48%;
+}
+
+/* Card populaire */
+.popular {
+	flex-direction: column;
 }
 
 .popular-image {
 	position: relative;
-	border-radius: 15px 0 0 15px;
-	width: 42%;
+	border-radius: 15px 15px 0 0;
 	height: initial;
-	aspect-ratio: 0.95 / 1;
+	width: 100%;
+	aspect-ratio: 2.07 / 1;
 }
 
 /* Légende card populaire */
@@ -218,15 +223,22 @@ main {
 }
 
 .popular h3 {
-	padding: 6% 0 0 0;
+	width: initial;
+	padding: 4% 0 0 0;
+}
+
+/* Prix populaire */
+.popular .price {
+	padding: 1% 0 0 0;
 }
 
 /* Note populaire */
 .popular .rating {
-	padding: 3% 0 6% 0;
+	padding: 3% 0 3% 0;
 }
 
 /* || ACTIVITES MARSEILLE */
+
 #activities {
 	padding: 0 6% 0 6%;
 }
@@ -238,84 +250,59 @@ main {
 
 /* Div avec les cards activités */
 .activities-list {
-	position: initial;
-	align-items: center;
-	margin: 25px 0 0 0;
-	height: initial;
-	aspect-ratio: initial;
+	align-content: space-around;
+	margin: 25px auto 0 auto;
+	max-width: 576px;
+	aspect-ratio: 0.715 / 1;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-	position: initial;
-	margin: 0 0 22px 0;
-	width: 71%;
-	max-width: 340px;
-	aspect-ratio: initial;
+	height: initial;
+	max-width: 266px;
+	width: calc(48% - 10px);
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-	height: initial;
-	aspect-ratio: initial;
+	order: 3;
+	position: relative;
+	margin-bottom: 1.1%;
+	aspect-ratio: 1.28 / 1;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-	height: initial;
-	aspect-ratio: initial;
+	order: 4;
+	position: relative;
+	aspect-ratio: 1.84 / 1;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-	height: initial;
-	aspect-ratio: initial;
+	order: 5;
+	position: relative;
+	aspect-ratio: 1.55 / 1;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-	height: initial;
-	aspect-ratio: initial;
-}
-
-/* Miniature 2eme card */
-.activities-list a:nth-child(2) img {
-	aspect-ratio: 2.49 / 1;
-}
-
-/* Miniature 3eme card */
-.activities-list a:nth-child(3) img {
-	aspect-ratio: 2.49 / 1;
-}
-
-/* Miniature 5eme card */
-.activities-list a:nth-child(5) img {
-	aspect-ratio: 2.49 / 1;
-}
-
-/* Miniature 6eme card */
-.activities-list a:nth-child(6) img {
-	aspect-ratio: 2.49 / 1;
-}
-
-/* Miniature card activité */
-.activity img {
-	flex-grow: 1;
-	max-width: 340px;
-	aspect-ratio: 2.49 / 1;
+	order: 6;
+	position: relative;
+	aspect-ratio: 1.44 / 1;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-	margin: 7% 0 5% 6%;
+	margin: auto 0 auto 5%;
 }
 
 /* || Footer */
 
 .footer-list {
 	flex-direction: column;
-	padding: 40px 0 0 4%;
 	width: 90%;
+	padding: 40px 0 0 4%;
 }
 
 .footer-list div {
