--- a/css/mobile-small.css
+++ b/css/mobile-small.css
@@ -1,57 +1,53 @@
 /* || STYLE GENERAL */
 
-/* Pour chaque titre de card */
-h3 {
-	font-size: 13px;
-}
-
-/* Prix hébergement */
-.price {
-	font-size: 12px;
-}
-
 /* Note étoiles */
 .rating {
 	justify-content: initial;
 	width: initial;
-	font-size: 10px;
 }
 
 /* || HEADER */
 
 header {
-	flex-direction: row;
-	align-items: initial;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 0 0 0;
+	width: 100%;
 }
 
 /* Logo */
 header img {
-	margin: 34px 0 0 6%;
+	margin: 10px 0 0 12%;
 }
 
 nav {
-	margin: 0 0 0 0;
-	width: initial;
+	margin: 30px 0 0 0;
+	width: 100%;
 }
 
 header ul {
-	text-align: initial;
+	justify-content: initial;
+	align-items: initial;
+	text-align: center;
 }
 
 header li {
-	border-bottom: initial;
-	width: initial;
+	border-top: 0;
+	border-bottom: 4px solid #f2f2f2;
+	width: 50%;
+	padding: 0 0 10px 0;
 }
 
-/* Bordure devient bleu quand la souris passe sur le li */
+/* Bordure du dessous devient bleu quand la souris passe sur le li */
 header li:hover {
-	border-bottom: initial;
+	border-top: 0;
+	border-bottom: 4px solid #0065fc;
 }
 
 /* || MAIN */
 
 main {
-	margin: 4% auto 50px auto;
+	margin: 4% auto 5% auto;
 	width: 100%;
 }
 
@@ -69,17 +65,27 @@ main {
 .fa-location-dot {
 	flex-shrink: 0;
 	border-radius: 15px 0 0 15px;
+	height: 45px;
+	width: 45px;
 }
 
 /* Champ de recherche */
 .search {
+	height: 45px;
 	min-width: 180px;
 }
 
 .search-button {
 	flex-shrink: 0;
+	border-radius: 15px;
 	margin: 0 0 0 0;
-	border-radius: 0 20px 20px 0;
+	width: 45px;
+	font-weight: initial;
+}
+
+.search-button:before {
+	content: "\f002";
+	font-family: fontAwesome;
 }
 
 /* || FILTRES ET RESULTATS */
@@ -100,8 +106,8 @@ main {
 
 /* Logo filtre */
 .filters .fa-solid {
-	width: 40px;
 	height: 40px;
+	width: 40px;
 }
 
 /* Intitulé filtre */
@@ -110,7 +116,7 @@ main {
 	font-size: 17px;
 }
 
-/* Dimensions de la div avec logo + phrase */
+/* Div avec logo + phrase */
 .results {
 	align-items: initial;
 	margin: 20px 0 0 0;
@@ -118,8 +124,8 @@ main {
 
 .fa-info {
 	flex-shrink: 0;
-	width: 20px;
 	height: 20px;
+	width: 20px;
 }
 
 /* Div hébergements et populaires */
@@ -143,7 +149,6 @@ main {
 	border-radius: initial;
 	background-color: initial;
 	width: initial;
-	/* Arrondi bordure */
 	padding: 0 6% 0 6%;
 }
 
@@ -153,18 +158,20 @@ main {
 }
 
 .lodging-list {
-	flex-direction: row;
+	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
-	margin: 4% auto 0 auto;
-	max-width: 576px;
+	margin: 15px 0 0 0;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-	margin: 0 1% 3.5% 1%;
-	width: 48%;
-	max-width: 276px;
+	margin: 0 0 12px 0;
+	max-width: 300px;
+	width: 94%;
+}
+
+.lodging-image {
+	aspect-ratio: 2.85 / 1;
 }
 
 /* "Afficher plus" */
@@ -192,31 +199,24 @@ main {
 }
 
 .popular-list {
-	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
-	margin: 4% auto 0 auto;
-	max-width: 576px;
+	margin: 15px 0 0 0;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-	margin: 0 1% 3.5% 1%;
-	width: 48%;
-	max-width: 276px;
-}
-
-/* Card populaire */
-.popular {
-	flex-direction: column;
+	margin: 0 0 8px 0;
+	max-width: 300px;
+	width: 94%;
+	padding: 5px;
 }
 
 .popular-image {
 	position: relative;
-	border-radius: 15px 15px 0 0;
-	width: 100%;
+	border-radius: 15px 0 0 15px;
 	height: initial;
-	aspect-ratio: 2.07 / 1;
+	width: 42%;
+	aspect-ratio: 0.95 / 1;
 }
 
 /* Légende card populaire */
@@ -225,18 +225,13 @@ main {
 }
 
 .popular h3 {
-	padding: 4% 0 0 0;
 	width: initial;
-}
-
-/* Prix populaire */
-.popular .price {
-	padding: 1% 0 0 0;
+	padding: 6% 0 0 0;
 }
 
 /* Note populaire */
 .popular .rating {
-	padding: 3% 0 3% 0;
+	padding: 3% 0 6% 0;
 }
 
 /* || ACTIVITES MARSEILLE */
@@ -252,59 +247,84 @@ main {
 
 /* Div avec les cards activités */
 .activities-list {
-	align-content: space-around;
-	margin: 25px auto 0 auto;
-	max-width: 576px;
-	aspect-ratio: 0.715 / 1;
+	position: initial;
+	align-items: center;
+	margin: 25px 0 0 0;
+	height: initial;
+	aspect-ratio: initial;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-	width: calc(48% - 10px);
-	max-width: 266px;
-	height: initial;
+	position: initial;
+	margin: 0 0 20px 0;
+	max-width: 300px;
+	width: 94%;
+	aspect-ratio: initial;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-	position: relative;
-	order: 3;
-	margin-bottom: 1.1%;
-	aspect-ratio: 1.28 / 1;
+	height: initial;
+	aspect-ratio: initial;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-	position: relative;
-	order: 4;
-	aspect-ratio: 1.84 / 1;
+	height: initial;
+	aspect-ratio: initial;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-	position: relative;
-	order: 5;
-	aspect-ratio: 1.55 / 1;
+	height: initial;
+	aspect-ratio: initial;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-	position: relative;
-	order: 6;
-	aspect-ratio: 1.44 / 1;
+	height: initial;
+	aspect-ratio: initial;
+}
+
+/* Miniature 2eme card */
+.activities-list a:nth-child(2) img {
+	aspect-ratio: 2.49 / 1;
+}
+
+/* Miniature 3eme card */
+.activities-list a:nth-child(3) img {
+	aspect-ratio: 2.49 / 1;
+}
+
+/* Miniature 5eme card */
+.activities-list a:nth-child(5) img {
+	aspect-ratio: 2.49 / 1;
+}
+
+/* Miniature 6eme card */
+.activities-list a:nth-child(6) img {
+	aspect-ratio: 2.49 / 1;
+}
+
+/* Miniature card activité */
+.activity img {
+	flex-grow: 1;
+	max-width: 300px;
+	aspect-ratio: 2.49 / 1;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-	margin: auto 0 auto 5%;
+	margin: 7% 0 5% 6%;
 }
 
 /* || Footer */
 
 .footer-list {
 	flex-direction: column;
-	padding: 40px 0 0 4%;
 	width: 90%;
+	padding: 40px 0 0 4%;
 }
 
 .footer-list div {
