align-content sur la liste d'activités

--- a/css/mobile-small.css
+++ b/css/mobile-small.css
@@ -248,6 +248,7 @@ main {
 /* Div avec les cards activités */
 .activities-list {
 	position: initial;
+	align-content: initial;
 	align-items: center;
 	margin: 25px 0 0 0;
 	height: initial;
