--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	align-content: space-between;
 	align-items: flex-start;
 	flex-wrap: wrap;
 	margin: 25px 0 0 0;
